frontend mockups (cart,checkout,menu,main)

--- a/Restaurant Ordering System/public_html/customer_main.html
+++ b/Restaurant Ordering System/public_html/customer_main.html
@@ -1,2 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Self Service Ordering</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-50 font-sans">
 
+  <!-- Header -->
+  <header class="bg-white shadow p-4 flex justify-between items-center">
+    <h1 class="text-2xl font-bold text-gray-800">Welcome to Our __ </h1>
+    <a href="customer_cart.html" class="text-blue-600 hover:underline">View Cart</a>
+  </header>
+
+  <!-- Welcome Section -->
+  <main class="p-6 max-w-4xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-4 text-gray-800">Order Your Favorite __  Easily!</h2>
+    <p class="text-gray-600 mb-6">Browse our menu, add items to your cart, and checkout in a few clicks.</p>
+    
+    <!-- Buttons -->
+    <div class="space-x-4">
+      <a href="customer_menu.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">View Menu</a>
+      <a href="customer_checkout.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">Checkout</a>
+    </div>
+    
+    <!-- Featured Products -->
+    <section class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 mt-8">
+      <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
+        <img src="https://via.placeholder.com/300x200" alt="Product" class="w-full h-40 object-cover">
+        <div class="p-4 flex flex-col flex-grow">
+          <h2 class="text-lg font-semibold text-gray-800">Product 1</h2>
+          <p class="text-gray-600 text-sm flex-grow">Product Description 1</p>
+          <p class="text-gray-900 font-bold mt-2">$Product Price 1</p>
+        </div>
+      </div>
+      <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
+        <img src="https://via.placeholder.com/300x200" alt="Product" class="w-full h-40 object-cover">
+        <div class="p-4 flex flex-col flex-grow">
+          <h2 class="text-lg font-semibold text-gray-800">Product 2</h2>
+          <p class="text-gray-600 text-sm flex-grow">Product 2 Description</p>
+          <p class="text-gray-900 font-bold mt-2">$Product 2 Price</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+</body>
+</html>
 
