--- a/Restaurant Ordering System/public_html/employee_main.html
+++ b/Restaurant Ordering System/public_html/employee_main.html
@@ -14,8 +14,8 @@
   </header>
   
   <main class="p-6 max-w-4xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-4 text-gray-800">Manage Your Restaurant Easily</h2>
-    <p class="text-gray-600 mb-6">Edit the menu, confirm customer orders, and oversee any operations.</p>
+    <h2 class="text-3xl font-bold mb-4 text-gray-800">Manage Our Restaurant Easily</h2>
+    <p class="text-gray-600 mb-6">Edit the menu and confirm customer orders.</p>
    
     
     <div class="space-x-4">
