--- a/Restaurant Ordering System/public_html/customer_main.html
+++ b/Restaurant Ordering System/public_html/customer_main.html
@@ -6,12 +6,17 @@
   <title>Self Service Ordering</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 font-sans">
+<body class="bg-gradient-to-br from-yellow-50 to-orange-100 font-serif">
+
 
   <!-- Header -->
   <header class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-gray-800">Welcome to Our __ </h1>
-    <a href="customer_cart.html" class="text-blue-600 hover:underline">View Cart</a>
+    <a href="customer_cart.html"
+   class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">
+  🛒 View Cart (<span id="cartCount">0</span>)
+</a>
+
   </header>
 
   <!-- Welcome Section -->
@@ -25,27 +30,70 @@
       <a href="customer_checkout.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">Checkout</a>
     </div>
     
+    
     <!-- Featured Products -->
-    <section class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 mt-8">
-      <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
-        <img src="https://via.placeholder.com/300x200" alt="Product" class="w-full h-40 object-cover">
-        <div class="p-4 flex flex-col flex-grow">
-          <h2 class="text-lg font-semibold text-gray-800">Product 1</h2>
-          <p class="text-gray-600 text-sm flex-grow">Product Description 1</p>
-          <p class="text-gray-900 font-bold mt-2">$Product Price 1</p>
-        </div>
-      </div>
-      <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
-        <img src="https://via.placeholder.com/300x200" alt="Product" class="w-full h-40 object-cover">
-        <div class="p-4 flex flex-col flex-grow">
-          <h2 class="text-lg font-semibold text-gray-800">Product 2</h2>
-          <p class="text-gray-600 text-sm flex-grow">Product 2 Description</p>
-          <p class="text-gray-900 font-bold mt-2">$Product 2 Price</p>
-        </div>
-      </div>
-    </section>
-  </main>
+<section class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 mt-8">
 
+  <!-- Latte -->
+  <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
+    <img src="https://images.unsplash.com/photo-1511920170033-f8396924c348?auto=format&fit=crop&w=600&q=80"
+         alt="Latte" class="w-full h-40 object-cover">
+    <div class="p-4 flex flex-col flex-grow">
+      <h2 class="text-lg font-semibold text-gray-800">Latte</h2>
+      <p class="text-gray-600 text-sm flex-grow">Creamy espresso with steamed milk.</p>
+      <p class="text-gray-900 font-bold mt-2">$9.99</p>
+      <button
+        class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-center"
+        data-add-to-cart
+        data-id="latte"
+        data-name="Latte"
+        data-price="9.99">
+        Add to Cart
+      </button>
+    </div>
+  </div>
+
+  <!-- Cappuccino -->
+  <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
+    <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=600&q=80"
+         alt="Cappuccino" class="w-full h-40 object-cover">
+    <div class="p-4 flex flex-col flex-grow">
+      <h2 class="text-lg font-semibold text-gray-800">Cappuccino</h2>
+      <p class="text-gray-600 text-sm flex-grow">Espresso with foamed milk and a dash of cocoa.</p>
+      <p class="text-gray-900 font-bold mt-2">$19.50</p>
+      <button
+        class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
+        data-add-to-cart
+        data-id="cappuccino"
+        data-name="Cappuccino"
+        data-price="19.50">
+        Add to Cart
+      </button>
+    </div>
+  </div>
+
+</section>
+
+
+  <!-- Shared cart logic -->
+  <script src="js/cart.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      // Always sync header count
+      Cart.updateCartCount('cartCount');
+
+      // Wire up add-to-cart buttons
+      document.querySelectorAll('[data-add-to-cart]').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const { id, name, price } = btn.dataset;   <!-- FIX: moved console.log after destructuring -->
+          const priceCents = Math.round(parseFloat(price) * 100);
+          Cart.addItem({ id, name, priceCents, qty: 1 });
+          Cart.updateCartCount('cartCount');
+          Cart.showToast(`${name} added to cart ✅`);
+        });
+      });
+    });
+  </script>
 </body>
 </html>
 
