--- a/Restaurant Ordering System/public_html/employee_menu.html
+++ b/Restaurant Ordering System/public_html/employee_menu.html
@@ -43,13 +43,13 @@
       <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
         <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
           <div class="p-4 flex flex-col flex-grow">
-            <p class="text-gray-600 text-sm flex-grow">Order #1 - Customer: John Doe - Total: $25.00</p>
+            <p class="text-gray-600 text-sm flex-grow">Order #1 - Customer: Sean Paul - Total: $25.00</p>
             <button class="bg-green-600 text-white px-3 py-1 rounded mt-2 hover:bg-green-700">Confirm Order</button>
           </div>
         </div>
         <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
           <div class="p-4 flex flex-col flex-grow">
-            <p class="text-gray-600 text-sm flex-grow">Order #2 - Customer: Jane Smith - Total: $15.00</p>
+            <p class="text-gray-600 text-sm flex-grow">Order #2 - Customer: Joe Lee - Total: $15.00</p>
             <button class="bg-green-600 text-white px-3 py-1 rounded mt-2 hover:bg-green-700">Confirm Order</button>
           </div>
         </div>
