--- a/Restaurant Ordering System/public_html/customer_cart.html
+++ b/Restaurant Ordering System/public_html/customer_cart.html
@@ -26,7 +26,7 @@
       <!-- Cart Item -->
       <div class="flex items-center justify-between border-b py-4">
         <div class="flex items-center space-x-4">
-          <img src="https://via.placeholder.com/80x60" alt="Cappuccino" class="w-20 h-16 object-cover rounded">
+          <img src="https://via.placeholder.com/80x60" alt="Product" class="w-20 h-16 object-cover rounded">
           <div>
             <p class="font-semibold text-gray-800">Product 1</p>
             <p class="text-gray-600 text-sm">Product 1 Description</p>
