--- a/Restaurant Ordering System/public_html/customer_menu.html
+++ b/Restaurant Ordering System/public_html/customer_menu.html
@@ -13,7 +13,7 @@
     <h1 class="text-2xl font-bold text-gray-800">Our Menu</h1>
     <div class="space-x-4">
         <a href="customer_main.html" class="bg-gray-200 text-gray-800 px-3 py-1 rounded hover:bg-gray-300">Home</a>
-        <a href="cart.html" class="text-blue-600 hover:underline">View Cart</a>
+        <a href="customer_cart.html" class="text-blue-600 hover:underline">View Cart</a>
     </div>
   </header>
 
