--- a/Restaurant Ordering System/public_html/Customer/customer_menu.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Menu - Self Service Ordering</title>
+  <title>Self Service Ordering</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-br from-yellow-50 to-orange-100 font-serif">
@@ -11,68 +11,81 @@
 
   <!-- Header -->
   <header class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">Our Menu</h1>
-    <div class="space-x-4">
-      <a href="customer_main.html" class="bg-gray-200 text-gray-800 px-3 py-1 rounded hover:bg-gray-300">Home</a>
-      <a href="customer_cart.html"
+    <h1 class="text-2xl font-bold text-gray-800">Welcome to Our __ </h1>
+    <a href="customer_cart.html"
    class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">
   🛒 View Cart (<span id="cartCount">0</span>)
 </a>
-    </div>
+
   </header>
 
-  <!-- Menu Grid -->
-  <main class="p-6">
-    <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+  <!-- Welcome Section -->
+  <main class="p-6 max-w-4xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-4 text-gray-800">Order Your Favorite __  Easily!</h2>
+    <p class="text-gray-600 mb-6">Browse our menu, add items to your cart, and checkout in a few clicks.</p>
 
-<!-- Latte -->
-<div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
-  <img src="https://images.unsplash.com/photo-1511920170033-f8396924c348?auto=format&fit=crop&w=600&q=80"
-       alt="Latte" class="w-full h-40 object-cover">
-  <div class="p-4 flex flex-col flex-grow">
-    <h2 class="text-lg font-semibold text-gray-800">Latte</h2>
-    <p class="text-gray-600 text-sm flex-grow">Creamy espresso with steamed milk.</p>
-    <p class="text-gray-900 font-bold mt-2">$9.99</p>
-    <button
-      class="mt-3 bg-blue-600 text-white py-2 px-4 rounded hover:bg-green-700"
-      data-add-to-cart
-      data-id="latte"
-      data-name="Latte"
-      data-price="9.99">
-      Add to Cart
-    </button>
+    <!-- Buttons -->
+    <div class="space-x-4">
+      <a href="customer_menu.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">View Menu</a>
+      <a href="customer_checkout.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">Checkout</a>
+    </div>
+
+
+    <!-- Featured Products -->
+<section class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 mt-8">
+
+  <!-- Latte -->
+  <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
+    <img src="https://images.unsplash.com/photo-1511920170033-f8396924c348?auto=format&fit=crop&w=600&q=80"
+         alt="Latte" class="w-full h-40 object-cover">
+    <div class="p-4 flex flex-col flex-grow">
+      <h2 class="text-lg font-semibold text-gray-800">Latte</h2>
+      <p class="text-gray-600 text-sm flex-grow">Creamy espresso with steamed milk.</p>
+      <p class="text-gray-900 font-bold mt-2">$9.99</p>
+      <button
+        class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-center"
+        data-add-to-cart
+        data-id="latte"
+        data-name="Latte"
+        data-price="9.99">
+        Add to Cart
+      </button>
+    </div>
   </div>
-</div>
 
-<!-- Cappuccino -->
-<div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
-  <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=600&q=80"
-       alt="Cappuccino" class="w-full h-40 object-cover">
-  <div class="p-4 flex flex-col flex-grow">
-    <h2 class="text-lg font-semibold text-gray-800">Cappuccino</h2>
-    <p class="text-gray-600 text-sm flex-grow">Espresso with foamed milk and a dash of cocoa.</p>
-    <p class="text-gray-900 font-bold mt-2">$19.50</p>
-    <button
-      class="mt-3 bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700"
-      data-add-to-cart
-      data-id="cappuccino"
-      data-name="Cappuccino"
-      data-price="19.50">
-      Add to Cart
-    </button>
+  <!-- Cappuccino -->
+  <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
+    <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=600&q=80"
+         alt="Cappuccino" class="w-full h-40 object-cover">
+    <div class="p-4 flex flex-col flex-grow">
+      <h2 class="text-lg font-semibold text-gray-800">Cappuccino</h2>
+      <p class="text-gray-600 text-sm flex-grow">Espresso with foamed milk and a dash of cocoa.</p>
+      <p class="text-gray-900 font-bold mt-2">$19.50</p>
+      <button
+        class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
+        data-add-to-cart
+        data-id="cappuccino"
+        data-name="Cappuccino"
+        data-price="19.50">
+        Add to Cart
+      </button>
+    </div>
   </div>
-</div>
 
-  </main>
+</section>
 
-    <!-- Shared cart logic -->
+
+  <!-- Shared cart logic -->
+  <script src="js/cart.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', () => {
+      // Always sync header count
       Cart.updateCartCount('cartCount');
 
+      // Wire up add-to-cart buttons
       document.querySelectorAll('[data-add-to-cart]').forEach(btn => {
         btn.addEventListener('click', () => {
-          const { id, name, price } = btn.dataset;
+          const { id, name, price } = btn.dataset;   <!-- FIX: moved console.log after destructuring -->
           const priceCents = Math.round(parseFloat(price) * 100);
           Cart.addItem({ id, name, priceCents, qty: 1 });
           Cart.updateCartCount('cartCount');
