--- a/Restaurant Ordering System/public_html/Customer/customer_cart.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_cart.html
@@ -12,8 +12,8 @@
   <header class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-gray-800">Your Cart</h1>
     <div class="space-x-4">
-      <a href="customer_main.html" class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">Home</a>
-      <a href="customer_menu.html" class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">Menu</a>
+      <a href="/Customer/customer_main.html" class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">Home</a>
+      <a href="/Customer/customer_menu.html" class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">Menu</a>
       <span class="text-gray-600">Items: <span id="cartCount">0</span></span>
     </div>
   </header>
@@ -23,7 +23,7 @@
     <!-- Empty state -->
     <div id="emptyState" class="hidden bg-white border border-dashed border-gray-300 rounded-lg p-8 text-center text-gray-600">
       <p class="mb-4">Your cart is empty.</p>
-      <a href="customer_menu.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Browse Menu</a>
+      <a href="/Customer/customer_menu.html" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Browse Menu</a>
     </div>
 
     <!-- Cart table -->
@@ -50,9 +50,9 @@
       </div>
       <div class="space-x-2">
         <button id="clearCart" class="bg-rose-600 text-white px-4 py-2 rounded-lg shadow hover:bg-rose-700 transition">Clear Cart</button>
-        <a href="customer_checkout.html" class="bg-emerald-600 text-white px-4 py-2 rounded-lg shadow hover:bg-emerald-700 transition">Proceed to Checkout</a>
+        <a href="/Customer/customer_checkout.html" class="bg-emerald-600 text-white px-4 py-2 rounded-lg shadow hover:bg-emerald-700 transition">Proceed to Checkout</a>
       </div>
-    </div>
+    </div> 
 
   </main>
 
