--- a/Restaurant Ordering System/public_html/Customer/customer_menu.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_menu.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-gray-800">Welcome to Our __ </h1>
-    <a href="customer_cart.html"
+    <a href="/Customer/customer_cart.html"
    class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">
   🛒 View Cart (<span id="cartCount">0</span>)
 </a>
@@ -26,8 +26,8 @@
 
     <!-- Buttons -->
     <div class="space-x-4">
-      <a href="customer_menu.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">View Menu</a>
-      <a href="customer_checkout.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">Checkout</a>
+      <a href="/Customer/customer_menu.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">View Menu</a>
+      <a href="/Customer/customer_checkout.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">Checkout</a>
     </div>
 
 
