--- a/Restaurant Ordering System/public_html/Customer/customer_menu.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_menu.html
@@ -6,93 +6,125 @@
   <title>Self Service Ordering</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-br from-yellow-50 to-orange-100 font-serif">
 
+<body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
 
   <!-- Header -->
-  <header class="bg-white shadow p-4 flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-gray-800">Welcome to Our __ </h1>
-    <a href="/Customer/customer_cart.html"
-   class="inline-flex items-center bg-yellow-500 text-white px-4 py-2 rounded-lg shadow hover:bg-yellow-600 transition">
-  🛒 View Cart (<span id="cartCount">0</span>)
-</a>
+  <header class="bg-white border-b border-gray-200">
+    <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
+      <div class="flex items-center gap-3">
+        <!-- Mobile Back Button -->
+        <button onclick="goBackOrHome()" 
+                class="sm:hidden text-gray-600 hover:text-gray-800 text-sm bg-gray-100 px-3 py-1 rounded-md border border-gray-200">
+          ← Back
+        </button>
+        <h1 class="text-xl sm:text-2xl font-semibold">Our Menu</h1>
+      </div>
 
+      <!-- Desktop Navigation -->
+      <nav class="hidden sm:flex space-x-6 text-sm">
+        <a href="customer_main.html" class="hover:text-blue-600 transition">Home</a>
+        <a href="customer_cart.html" class="hover:text-blue-600 transition">Cart</a>
+        <a href="customer_checkout.html" class="hover:text-blue-600 transition">Checkout</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- Welcome Section -->
-  <main class="p-6 max-w-4xl mx-auto text-center">
-    <h2 class="text-3xl font-bold mb-4 text-gray-800">Order Your Favorite __  Easily!</h2>
-    <p class="text-gray-600 mb-6">Browse our menu, add items to your cart, and checkout in a few clicks.</p>
+  <!-- Main -->
+  <main class="flex-grow max-w-6xl mx-auto px-4 py-8">
+    <h2 class="text-lg sm:text-xl font-semibold mb-6 text-center">Browse and Add Items to Your Cart</h2>
 
-    <!-- Buttons -->
-    <div class="space-x-4">
-      <a href="/Customer/customer_menu.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700">View Menu</a>
-      <a href="/Customer/customer_checkout.html" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700">Checkout</a>
+    <!-- Checkout Button (mobile top shortcut) -->
+    <div class="sm:hidden text-center mb-5">
+      <a href="customer_checkout.html"
+         class="inline-block bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
+        Go to Checkout
+      </a>
     </div>
 
+    <!-- Menu Grid -->
+    <section class="grid gap-4 sm:gap-6 grid-cols-2 sm:grid-cols-3 md:grid-cols-4">
+      <!-- Latte -->
+      <div class="bg-white border border-gray-200 rounded-lg overflow-hidden shadow-sm flex flex-col">
+        <img src="https://images.unsplash.com/photo-1511920170033-f8396924c348?auto=format&fit=crop&w=600&q=80"
+             alt="Latte" class="w-full h-36 object-cover">
+        <div class="p-3 flex flex-col flex-grow">
+          <h3 class="font-medium text-gray-900">Latte</h3>
+          <p class="text-xs text-gray-600 flex-grow">Creamy espresso with steamed milk.</p>
+          <div class="flex justify-between items-center mt-2">
+            <span class="font-semibold">$9.99</span>
+            <button
+              class="bg-blue-600 text-white px-3 py-1 rounded-md text-sm hover:bg-blue-700 transition"
+              data-add-to-cart
+              data-id="latte"
+              data-name="Latte"
+              data-price="9.99">
+              Add
+            </button>
+          </div>
+        </div>
+      </div>
 
-    <!-- Featured Products -->
-<section class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 mt-8">
+      <!-- Cappuccino -->
+      <div class="bg-white border border-gray-200 rounded-lg overflow-hidden shadow-sm flex flex-col">
+        <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=600&q=80"
+             alt="Cappuccino" class="w-full h-36 object-cover">
+        <div class="p-3 flex flex-col flex-grow">
+          <h3 class="font-medium text-gray-900">Cappuccino</h3>
+          <p class="text-xs text-gray-600 flex-grow">Espresso with foamed milk and cocoa.</p>
+          <div class="flex justify-between items-center mt-2">
+            <span class="font-semibold">$19.50</span>
+            <button
+              class="bg-blue-600 text-white px-3 py-1 rounded-md text-sm hover:bg-blue-700 transition"
+              data-add-to-cart
+              data-id="cappuccino"
+              data-name="Cappuccino"
+              data-price="19.50">
+              Add
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!-- Latte -->
-  <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
-    <img src="https://images.unsplash.com/photo-1511920170033-f8396924c348?auto=format&fit=crop&w=600&q=80"
-         alt="Latte" class="w-full h-40 object-cover">
-    <div class="p-4 flex flex-col flex-grow">
-      <h2 class="text-lg font-semibold text-gray-800">Latte</h2>
-      <p class="text-gray-600 text-sm flex-grow">Creamy espresso with steamed milk.</p>
-      <p class="text-gray-900 font-bold mt-2">$9.99</p>
-      <button
-        class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 text-center"
-        data-add-to-cart
-        data-id="latte"
-        data-name="Latte"
-        data-price="9.99">
-        Add to Cart
-      </button>
+    <!-- Checkout Button (desktop bottom) -->
+    <div class="hidden sm:flex justify-end mt-8">
+      <a href="customer_checkout.html"
+         class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">
+        Proceed to Checkout
+      </a>
     </div>
-  </div>
+  </main>
 
-  <!-- Cappuccino -->
-  <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col">
-    <img src="https://images.unsplash.com/photo-1509042239860-f550ce710b93?auto=format&fit=crop&w=600&q=80"
-         alt="Cappuccino" class="w-full h-40 object-cover">
-    <div class="p-4 flex flex-col flex-grow">
-      <h2 class="text-lg font-semibold text-gray-800">Cappuccino</h2>
-      <p class="text-gray-600 text-sm flex-grow">Espresso with foamed milk and a dash of cocoa.</p>
-      <p class="text-gray-900 font-bold mt-2">$19.50</p>
-      <button
-        class="mt-4 bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700"
-        data-add-to-cart
-        data-id="cappuccino"
-        data-name="Cappuccino"
-        data-price="19.50">
-        Add to Cart
-      </button>
+  <!-- Footer -->
+  <footer class="bg-white border-t border-gray-200 mt-10">
+    <div class="max-w-6xl mx-auto p-4 text-center text-xs text-gray-500">
+      &copy; 2025 Self Service Ordering. All rights reserved.
     </div>
-  </div>
+  </footer>
 
-</section>
-
-
-  <!-- Shared cart logic -->
-  <script src="js/cart.js"></script>
+  <!-- JS -->
+  <script src="../js/cart.js"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', () => {
-      // Always sync header count
-      Cart.updateCartCount('cartCount');
+    function goBackOrHome() {
+      if (document.referrer && document.referrer !== window.location.href) {
+        history.back();
+      } else {
+        window.location.href = 'customer_main.html';
+      }
+    }
 
-      // Wire up add-to-cart buttons
+    document.addEventListener('DOMContentLoaded', () => {
       document.querySelectorAll('[data-add-to-cart]').forEach(btn => {
         btn.addEventListener('click', () => {
-          const { id, name, price } = btn.dataset;   <!-- FIX: moved console.log after destructuring -->
+          const { id, name, price } = btn.dataset;
           const priceCents = Math.round(parseFloat(price) * 100);
           Cart.addItem({ id, name, priceCents, qty: 1 });
-          Cart.updateCartCount('cartCount');
-          Cart.showToast(`${name} added to cart ✅`);
+          Cart.showToast(`${name} added to cart`);
         });
       });
     });
   </script>
 </body>
 </html>
+
