--- a/Restaurant Ordering System/public_html/Customer/customer_main.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_main.html
@@ -45,7 +45,7 @@
   <!-- Main content / call to action -->
   <main class="flex-grow px-4 sm:px-6 py-8 max-w-4xl mx-auto">
     <div class="text-center mb-8">
-      <a href="customer_menu.html"
+      <a href="Customer/customer_menu.html"
          class="inline-block bg-blue-600 text-white px-6 py-3 rounded-md shadow-lg hover:bg-blue-700 transition">
         Browse Menu
       </a>
