landing page button

--- a/Restaurant Ordering System/public_html/Employee/employee_login.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_login.html
@@ -30,7 +30,7 @@
       </button>
 
       <p class="text-center text-sm text-gray-500 mt-4">
-        <a href="/public_html/index.html" class="text-amber-600 hover:underline">← Back to Landing Page</a>
+        <a href="/index.html" class="text-amber-600 hover:underline">← Back to Landing Page</a>
       </p>
     </form>
   </div>
