--- a/Restaurant Ordering System/public_html/Customer/customer_registration.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_registration.html
@@ -22,7 +22,7 @@
 
     <!-- Nav Buttons (absolute paths) -->
     <div class="flex gap-2">
-      <a href="Customer/customer_main.html"
+      <a href="/Customer/customer_main.html"
          class="bg-gray-100 text-gray-800 px-3 py-1 rounded border border-gray-300 hover:bg-gray-200 transition text-sm">
          Home
       </a>
