--- a/Restaurant Ordering System/public_html/Employee/employee_login.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_login.html
@@ -3,29 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Employee Login | Self-Service POS</title>
+  <title>Employee Login | POS System</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gradient-to-br from-amber-50 to-amber-100 min-h-screen flex items-center justify-center font-sans">
-
   <div class="bg-white shadow-2xl rounded-2xl p-8 w-full max-w-md">
     <h1 class="text-3xl font-bold text-amber-700 mb-6 text-center">Employee Login</h1>
 
     <form id="employeeLoginForm" class="space-y-5">
       <div>
-        <label for="username" class="block text-gray-700 font-medium mb-2">Username</label>
-        <input type="text" id="username" name="username" placeholder="Enter your username"
-               class="w-full border border-gray-300 rounded-xl p-3 focus:outline-none focus:ring-2 focus:ring-amber-400" required>
+        <label class="block text-gray-700 font-medium mb-2">Username</label>
+        <input type="text" id="username" required
+          class="w-full border border-gray-300 rounded-xl p-3 focus:outline-none focus:ring-2 focus:ring-amber-400">
       </div>
 
       <div>
-        <label for="password" class="block text-gray-700 font-medium mb-2">Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password"
-               class="w-full border border-gray-300 rounded-xl p-3 focus:outline-none focus:ring-2 focus:ring-amber-400" required>
+        <label class="block text-gray-700 font-medium mb-2">Password</label>
+        <input type="password" id="password" required
+          class="w-full border border-gray-300 rounded-xl p-3 focus:outline-none focus:ring-2 focus:ring-amber-400">
       </div>
 
       <button type="submit"
-              class="w-full bg-amber-500 hover:bg-amber-600 text-white font-semibold py-3 rounded-xl shadow-md transition-all">
+        class="w-full bg-amber-500 hover:bg-amber-600 text-white font-semibold py-3 rounded-xl shadow-md transition-all">
         Log In
       </button>
 
@@ -38,10 +37,10 @@
   <script>
     document.getElementById('employeeLoginForm').addEventListener('submit', async (e) => {
       e.preventDefault();
-      const username = document.getElementById('username').value;
-      const password = document.getElementById('password').value;
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
 
-      const response = await fetch('/employee/login', {
+      const response = await fetch('/Employee/login', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ username, password })
@@ -50,9 +49,13 @@
       const result = await response.json();
 
       if (result.success) {
-        window.location.href = '/employee_dashboard.html';
+        if (result.role && result.role.toLowerCase() === 'admin') {
+          window.location.href = '/Employee/admin_main.html';
+        } else {
+          window.location.href = '/Employee/employee_main.html';
+        }
       } else {
-        alert('Invalid credentials. Please try again.');
+        alert(result.message || 'Invalid credentials');
       }
     });
   </script>
