Employee Registration on admin role

--- a/Restaurant Ordering System/public_html/Employee/admin_main.html
+++ b/Restaurant Ordering System/public_html/Employee/admin_main.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,9 +18,9 @@
     <p class="text-gray-600 mb-6">Admin-only tools for employee and menu management.</p>
 
     <div class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 mt-8">
-      <button class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 shadow">Add New Employee</button>
-      <button class="bg-amber-600 text-white px-6 py-3 rounded hover:bg-amber-700 shadow">View Sales Reports</button>
-      <button class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 shadow">Manage Menu Items</button>
+      <a href="/Employee/employee_register.html" class="bg-blue-600 text-white px-6 py-3 rounded hover:bg-blue-700 shadow">➕ Add New Employee</a>
+      <button class="bg-amber-600 text-white px-6 py-3 rounded hover:bg-amber-700 shadow">View Reports</button>
+      <a href="/Employee/admin_menu.html" class="bg-green-600 text-white px-6 py-3 rounded">Manage Menu</a>
     </div>
   </main>
 
